Cambios en backend - Promotion - Expense
